--- a/.github/workflows-lab/Pull_Request.yaml
+++ b/.github/workflows-lab/Pull_Request.yaml
@@ -17,6 +17,7 @@ jobs:
     
     # check GITHUB_TOKEN has write permission
     - run: |
+        git fetch origin
         git checkout master
         git pull
         echo ${{github.sha}} >> ${{github.sha}}.txt
