--- a/.github/workflows-lab/Pull_Request.yaml
+++ b/.github/workflows-lab/Pull_Request.yaml
@@ -17,6 +17,8 @@ jobs:
     
     # check GITHUB_TOKEN has write permission
     - run: |
+        git config --global user.email "you@example.com"
+        git config --global user.name "Your Name"
         git fetch origin
         git checkout master
         git pull
